--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
+    "nestjs-redis": "git+https://github.com/skunight/nestjs-redis.git",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
