--- a/package.json
+++ b/package.json
@@ -22,17 +22,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
+    "@nestjs/typeorm": "^8.0.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
+    "nestjs-pino": "^2.3.1",
     "nestjs-redis": "git+https://github.com/skunight/nestjs-redis.git",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pino-http": "^6.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
