--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start:debug": "nest start --debug --watch",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -44,7 +44,8 @@
     "rxjs": "^7.2.0",
     "stacktrace-js": "^2.0.2",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "webpack": "^5.64.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
